kubernetes/apps/media/plik/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plik
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Plik
    gethomepage.dev/group: Media
    gethomepage.dev/icon: plik.png
    gethomepage.dev/description: Temp File Hosting
    gethomepage.dev/href: https://plik.${SECRET_DOMAIN}
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=plik"
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: websecure
  hostnames:
    - "plik.${SECRET_DOMAIN}"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: chain-no-auth-restrict-networks
      backendRefs:
        - name: plik
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plik-dl
spec:
  parentRefs:
    - name: external
      namespace: network
      sectionName: websecure
  hostnames:
    - "dl.${SECRET_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /file
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: chain-no-auth
      backendRefs:
        - name: plik
          port: 8080
